# athena

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  app.py  athena.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 18f69a0582c5_init_database.py  39c8b80f1f1b_init_database.py  8084e0cde436_init_table.py  80d895ed90d8_init_database.py  a33a99a6d263_init_database.py  b4191054611a_pyrogram_postgres.py  eb575135994c_initial_migration_with_login_and_.py  f9e36d62f551_summary_processing.py
scripts/: docker-entrypoint.sh  reset_database.py  run_migrations.py
src/: containers.py
src/api/: router.py
src/api/summary/: summary_constants.py  summary_resp.py  summary_router.py  summary_schemas.py  summary_service.py
src/shared/: agent.py  base.py  base_llm.py  cache.py  config.py  database.py  dependencies.py  event_bus.py  event_registry.py  events.py  exceptions.py  http.py  logging_utils.py  secrets.py  types.py  uow.py
src/telegram/: README.md  pyrogram_patches.py
src/telegram/bot/agents/: prompts.py  response_agent.py
src/telegram/bot/client/: telegram_bot.py
src/telegram/bot/login/: login_handlers.py
src/telegram/bot/messages/: messages_agent.py  messages_constants.py  messages_handlers.py  messages_schemas.py  messages_service.py
src/telegram/client/: client_config.py  client_model.py  client_object.py  telegram_client.py
src/telegram/messages/: messages_agent.py  messages_constants.py  messages_handlers.py  messages_schemas.py  messages_service.py
src/telegram/user/: telegram_session_manager.py  telegram_user_client.py  telegram_user_storage.py  user_session_manager.py
src/telegram/user/inbox/: inbox_handlers.py  message_handlers.py
src/telegram/user/login/: login_schemas.py
src/telegram/user/messages/: message_handlers.py
src/telegram/user/onboarding/: onboarding_schemas.py  onboarding_service.py  onboarding_texts.py
src/telegram/user/storage/: storage_schema.py  telegram_storage.py
src/telegram/user/summary/: summary_dspy.py  summary_handlers.py  summary_model.py  summary_schemas.py  summary_service.py
src/telegraph/: telegraph_constants.py  telegraph_exceptions.py  telegraph_model.py  telegraph_schemas.py  telegraph_service.py  telegraph_utils.py
src/telemetree/posts/: posts_agent.py  posts_constants.py  posts_model.py  posts_schemas.py  posts_service.py
src/telemetree/shared/: telemetree_config.py  telemetree_endpoints.py
tests/api/: test_chat_summary_schemas.py
tests/api/fixtures/: chat_summary_mocks.json
tests/shared/: test_http.py
tests/telegraph/: test_telegraph_conversion.py  test_telegraph_service.py
tests/telegraph/fixtures/: get_page_api_response.json  telegraph_dict.json  telegraph_html.html  telegraph_markdown.md
