[project]
name = "example-lib"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Cherniakov", email = "taequn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.6.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
