[project]
name = "Athena"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Cherniakov", email = "taequn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "commitizen>=4.6.0",
    "dependency-injector>=4.46.0",
    "diskcache>=5.6.3",
    "fastapi>=0.115.12",
    "google-cloud-secret-manager>=2.23.3",
    "google-generativeai>=0.8.5",
    "greenlet>=3.2.0",
    "kurigram",
    "lxml-html-clean>=0.4.2",
    "markdown>=3.8",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
    "vertexai>=1.71.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # mccabe
    "B",  # bugbear
    "UP", # pyupgrade
]
ignore = []  # Add any rules you want to ignore here

[tool.isort]
profile = "black"

# --- Pyright Configuration (Used by Pylance) ---
[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "**/.ipynb_checkpoints",
    "**/node_modules",
    "**/typestubs",
    ".venv",
    "build",
    "dist",
]

typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

# --- Pytest Configuration ---
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
kurigram = { url = "https://github.com/KurimuzonAkuma/pyrogram/archive/565c9a1a7f20b81a6532f2e70a1730c20e6be8e4.zip" }
